# cybersec_service_honeypot

./: CMakeLists.txt  README.md
.github/workflows/: discord-push.yml
include/: discord_global.hpp  discord_notifier.hpp  discord_payload.hpp  fake_shell.hpp  filesystem.hpp  logger.hpp  server.hpp  session.hpp  utils.hpp
src/: discord_global.cpp  discord_notifier.cpp  discord_payload.cpp  fake_shell.cpp  filesystem.cpp  logger.cpp  main.cpp  server.cpp  session.cpp  utils.cpp
